--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
 server.port=8080
+#spring.profiles.active=prop
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:emt
+spring.datasource.url=jdbc:h2:mem:lab
 spring.datasource.username=sa
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
